--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -205,8 +205,8 @@ include_directories(
 # catkin_add_nosetests(test)
 add_executable(talker src/talker.cpp)
 target_link_libraries(talker ${catkin_LIBRARIES})
-add_dependencies(talker myfirstros_generate_messages_cpp)
+#add_dependencies(talker myfirstros_generate_messages_cpp)
 
 add_executable(listener src/listener.cpp)
 target_link_libraries(listener ${catkin_LIBRARIES})
-add_dependencies(listener myfirstros_generate_messages_cpp)
+#add_dependencies(listener myfirstros_generate_messages_cpp)
